店舗リンク先遷移

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
+@import url('https://fonts.googleapis.com/earlyaccess/kokoro.css');
+@import url('https://fonts.googleapis.com/earlyaccess/nikukyu.css');
+@import url('https://www.fontfabric.com/fonts/muller/');
+@import url('http://www.fontfabric.com/phenomena-font/');
+@import url('https://fonts.googleapis.com/css?family=Anton');
+@import url('https://fonts.googleapis.com/css?family=Homemade+Apple');
+@import url('https://fonts.googleapis.com/css?family=Londrina+Shadow');
+@import url('https://fonts.googleapis.com/css?family=Corben:700');
+@import url('https://fonts.googleapis.com/css?family=Economica:700');
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
 html,
 body {
   padding: 0;
